Barebones UI for Community Feed

--- a/PickupSports.Android/PickupSports.Android.csproj
+++ b/PickupSports.Android/PickupSports.Android.csproj
@@ -115,5 +115,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\login_background.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\StockBasketballPhoto1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\StockBasketballPhoto2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\StockBasketballPhoto3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BballBackground.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
