--- a/PickupSports.Android/Properties/AndroidManifest.xml
+++ b/PickupSports.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.pickupsports">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
-	<application android:label="PickupSports.Android" android:theme="@style/MainTheme">
+	<application android:label="PickupSports.Android" android:theme="@style/MainTheme" android:hardwareAccelerated="false">
     <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCklISZtdGIfseDTq7jNcdytlqPhbGSZXY"/>
     <uses-library android:name="org.apache.http.legacy" android:required="false"/>
   </application>
