major UI improvements

--- a/PickupSports/PickupSports.csproj
+++ b/PickupSports/PickupSports.csproj
@@ -6,6 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Fonts\Brands-Regular-400.otf" />
+    <None Remove="Fonts\Free-Regular-400.otf" />
+    <None Remove="Fonts\Free-Solid-900.otf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Fonts\Brands-Regular-400.otf" />
+    <EmbeddedResource Include="Fonts\Free-Regular-400.otf" />
+    <EmbeddedResource Include="Fonts\Free-Solid-900.otf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="GoogleApi" Version="4.0.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.3.0" />
@@ -15,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\AddGamePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\CommunityPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
