--- a/PickupSports.Android/PickupSports.Android.csproj
+++ b/PickupSports.Android/PickupSports.Android.csproj
@@ -148,5 +148,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\brockerProfilePic.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\HoopersLogo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
